--- a/v2/src/main/java/view/MainFrame.form
+++ b/v2/src/main/java/view/MainFrame.form
@@ -6,7 +6,6 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="menuMenu">
           <Properties>
-            <Property name="text" type="java.lang.String" value="MENU"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
@@ -76,6 +75,14 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemClientsActionPerformed"/>
               </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="menuItemInvoices">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="INVOICES"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
+              </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
